03-header-based-routing/destination-rule-virtual-service-layer2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: layer2
spec:
  host: layer2
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: layer2
spec:
  hosts:
  - layer2
  http:
  - name: v1-match-for-username-mark
    match:
    - headers:
        username:
          exact: mark
    route:
    - destination:
        host: layer2
        port:
          number: 8080
        subset: v1
  - name: v2-match-for-others  
    route:      
    - destination:
        host: layer2
        port:
          number: 8080
        subset: v2
